--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -6,7 +6,8 @@
       "name": "Task1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOun9iMvHwm9ByHd9lUHd5I",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyM+WQxLsTVcrnsmAtG8pcCf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,10 +130,44 @@
     {
       "cell_type": "code",
       "source": [
-        "actual_vs_pred_plot(y_test,y_pred)"
+        "# Comparing Actual vs Predicted\n",
+        "df = pd.DataFrame({'Actual': y_test, 'Predicted': y_pred}) \n",
+        "# Plotting the Bar graph to depict the difference between the actual and predicted value\n",
+        "df.plot(kind='bar',figsize=(5,3))\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "oMjRO6JeO29v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Estimating training and test score\n",
+        "print(\"Training Score:\",model.score(X_train,y_train))\n",
+        "print(\"Test Score:\",model.score(X_test,y_test))"
       ],
       "metadata": {
         "id": "M9y9kR-vIGFs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Testing the model with our own data\n",
+        "hours = 9.25\n",
+        "test = np.array([hours])\n",
+        "test = test.reshape(-1, 1)\n",
+        "new_pred= model.predict(test)\n",
+        "print(\"No of Hours = {}\".format(hours))\n",
+        "print(\"Predicted Score = {}\".format(new_pred[0]))"
+      ],
+      "metadata": {
+        "id": "jK3lhpCQPB9Y"
       },
       "execution_count": null,
       "outputs": []
