--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+WQxLsTVcrnsmAtG8pcCf",
+      "authorship_tag": "ABX9TyMfrcjr4m/KpgaPvb8fkglm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Author : Anik Kumar\n",
+        "\n",
+        "## GRIP @ The Sparks Foundation\n",
+        "\n",
+        "> Task1 : Prediction using Supervised Machine Learning\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "mDl4cVUhIKoR"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -37,7 +52,7 @@
       },
       "outputs": [],
       "source": [
-        "# Importing the required libraries\n",
+        "# Import required libraries\n",
         "from sklearn.model_selection import train_test_split \n",
         "from sklearn.linear_model import LinearRegression\n",
         "import matplotlib.pyplot as plt\n",
@@ -64,11 +79,23 @@
     {
       "cell_type": "code",
       "source": [
-        "#Get Data information\n",
+        "# Get Data information\n",
         "df_data.info()"
       ],
       "metadata": {
         "id": "LE0CTF4tAO7w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View basic statistical details \n",
+        "df_data.describe()"
+      ],
+      "metadata": {
+        "id": "CdccCP2tC-Yn"
       },
       "execution_count": null,
       "outputs": []
@@ -89,10 +116,23 @@
     {
       "cell_type": "code",
       "source": [
-        "X = df_data.iloc[:, :-1].values  \n",
+        "# Select all rows and without last column of the dataset\n",
+        "X = df_data.iloc[:, :-1].values\n",
+        "print(X.shape)\n",
+        "# Select all row vector of the dataset\n",
         "y = df_data.iloc[:, 1].values \n",
-        "\n",
-        "# Split data train and test sets\n",
+        "print(y.shape)"
+      ],
+      "metadata": {
+        "id": "ZtTp_KF2Bi0N"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Spliting data train and test sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.8,test_size=0.2, random_state=0)"
       ],
       "metadata": {
@@ -106,6 +146,7 @@
       "source": [
         "# Define Model \n",
         "model = LinearRegression()  \n",
+        "# Fit the model on train set\n",
         "model.fit(X_train, y_train) "
       ],
       "metadata": {
@@ -117,7 +158,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Model Prediction \n",
+        "# Predict model test set\n",
         "y_pred = model.predict(X_test)\n",
         "print(X_test)"
       ],
@@ -132,7 +173,7 @@
       "source": [
         "# Comparing Actual vs Predicted\n",
         "df = pd.DataFrame({'Actual': y_test, 'Predicted': y_pred}) \n",
-        "# Plotting the Bar graph to depict the difference between the actual and predicted value\n",
+        "# Plotting actual vs predicted value\n",
         "df.plot(kind='bar',figsize=(5,3))\n",
         "plt.show()\n"
       ],
@@ -145,8 +186,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#Estimating training and test score\n",
-        "print(\"Training Score:\",model.score(X_train,y_train))\n",
+        "# Estimate train and test score\n",
+        "print(\"Train Score:\",model.score(X_train,y_train))\n",
         "print(\"Test Score:\",model.score(X_test,y_test))"
       ],
       "metadata": {
@@ -158,19 +199,30 @@
     {
       "cell_type": "code",
       "source": [
-        "# Testing the model with our own data\n",
+        "# Testing the model with given data\n",
         "hours = 9.25\n",
         "test = np.array([hours])\n",
         "test = test.reshape(-1, 1)\n",
         "new_pred= model.predict(test)\n",
-        "print(\"No of Hours = {}\".format(hours))\n",
-        "print(\"Predicted Score = {}\".format(new_pred[0]))"
+        "print(\"No of Hours = \",hours)\n",
+        "print(\"Predicted Score = \",new_pred[0])"
       ],
       "metadata": {
         "id": "jK3lhpCQPB9Y"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h3 align=\"center\">Thank You</h3>\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "36jlhOCrJNwl"
+      }
     }
   ]
 }
