--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfrcjr4m/KpgaPvb8fkglm",
+      "authorship_tag": "ABX9TyNn76zdos2b0M712ey06hWo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Step1: Import Libraries"
+      ],
+      "metadata": {
+        "id": "rWDXGylSM3P-"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -62,6 +71,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Step2: Reading data from given source"
+      ],
+      "metadata": {
+        "id": "lGA3ZcDgNjtk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Read data from remote link\n",
@@ -75,6 +93,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Step3: View information and statistical details about the DataFrame"
+      ],
+      "metadata": {
+        "id": "zCaRm-JfOo7A"
+      }
     },
     {
       "cell_type": "code",
@@ -101,6 +128,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Step4: Data Visualization"
+      ],
+      "metadata": {
+        "id": "W_ZqljoAPDyQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Plotting the Data\n",
@@ -112,6 +148,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Step5: Select a particular cell of the dataset"
+      ],
+      "metadata": {
+        "id": "VesgTjXNPYYu"
+      }
     },
     {
       "cell_type": "code",
@@ -130,6 +175,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Step6: Spliting data"
+      ],
+      "metadata": {
+        "id": "DqYOgPS3PcA6"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Spliting data train and test sets\n",
@@ -140,6 +194,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Step7: Select Model and Fit on training set"
+      ],
+      "metadata": {
+        "id": "LL30ncp6PfJR"
+      }
     },
     {
       "cell_type": "code",
@@ -156,6 +219,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Step8: Predict on test set"
+      ],
+      "metadata": {
+        "id": "IOXO5Oh7PjJP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Predict model test set\n",
@@ -169,9 +241,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Step9: Comparing actual vs predicted value"
+      ],
+      "metadata": {
+        "id": "OXTLXrhBPoCW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Comparing Actual vs Predicted\n",
+        "# Actual vs Predicted\n",
         "df = pd.DataFrame({'Actual': y_test, 'Predicted': y_pred}) \n",
         "# Plotting actual vs predicted value\n",
         "df.plot(kind='bar',figsize=(5,3))\n",
@@ -182,6 +263,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Step10: Train and Test Score"
+      ],
+      "metadata": {
+        "id": "2iyJiJpNPueF"
+      }
     },
     {
       "cell_type": "code",
@@ -195,6 +285,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Step11: Testing model from given input"
+      ],
+      "metadata": {
+        "id": "WuVKnEQ_Pyxh"
+      }
     },
     {
       "cell_type": "code",
