--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNFemsP0jXkypAhvQGiFtIP",
+      "authorship_tag": "ABX9TyO+mp+bIwTrqiojGPK6Ikss",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,20 +37,19 @@
       },
       "outputs": [],
       "source": [
-        "from sklearn.cluster import KMeans\n",
-        "import matplotlib.pyplot as plt\n",
-        "from mpl_toolkits.mplot3d import Axes3D\n",
         "import numpy as np\n",
-        "%matplotlib inline\n",
-        "from sklearn import datasets"
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.cluster import KMeans\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#Iris Dataset\n",
-        "iris = datasets.load_iris()\n",
-        "X = iris.data"
+        "#Iris.csv is now a pandas dataframe\n",
+        "iris =load_iris()\n",
+        "df_iris = pd.DataFrame(iris.data, columns = iris.feature_names)"
       ],
       "metadata": {
         "id": "eYODj6HidXze"
@@ -61,11 +60,30 @@
     {
       "cell_type": "code",
       "source": [
-        "#KMeans\n",
-        "km = KMeans(n_clusters=3)\n",
-        "km.fit(X)\n",
-        "km.predict(X)\n",
-        "labels = km.labels_"
+        "df_iris.head()"
+      ],
+      "metadata": {
+        "id": "GrJdnvHl6-IL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = df_iris.iloc[:, :-1].values\n",
+        "y = df_iris.iloc[:,   -1].values"
+      ],
+      "metadata": {
+        "id": "fmoes8pm8tRX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kmeans = KMeans(n_clusters=3,init = 'k-means++',   max_iter = 100, n_init = 10, random_state = 0)"
       ],
       "metadata": {
         "id": "DPDj4aM-daLS"
@@ -76,18 +94,39 @@
     {
       "cell_type": "code",
       "source": [
-        "#Plotting\n",
-        "fig = plt.figure(1, figsize=(7,7))\n",
-        "ax = Axes3D(fig, rect=[0, 0, 0.95, 1], elev=48, azim=134)\n",
-        "ax.scatter(X[:, 3], X[:, 0], X[:, 2],\n",
-        "          c=labels.astype(np.float), edgecolor=\"k\", s=50)\n",
-        "ax.set_xlabel(\"Petal width\")\n",
-        "ax.set_ylabel(\"Sepal length\")\n",
-        "ax.set_zlabel(\"Petal length\")\n",
-        "plt.title(\"K Means\", fontsize=14)"
+        "y_kmeans = kmeans.fit_predict(x)"
       ],
       "metadata": {
-        "id": "c-6OtmNyddDf"
+        "id": "BTRQ927a8mhC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(kmeans.cluster_centers_) #display cluster centers"
+      ],
+      "metadata": {
+        "id": "9MQEg_jA9NMZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.scatter(x[y_kmeans   == 0, 0], x[y_kmeans == 0, 1],s = 100, c = 'red', label = 'Iris-setosa')\n",
+        "plt.scatter(x[y_kmeans   == 1, 0], x[y_kmeans == 1, 1],s = 100, c = 'blue', label = 'Iris-versicolour')\n",
+        "plt.scatter(x[y_kmeans   == 2, 0], x[y_kmeans == 2, 1],s = 100, c = 'green', label = 'Iris-virginica')   #Visualising the clusters - On the first two columns\n",
+        "plt.scatter(kmeans.cluster_centers_[:, 0], kmeans.cluster_centers_[:,1],s = 100, c = 'black', label = 'Centroids')   #plotting the centroids of the clusters\n",
+        "plt.legend()\n",
+        "plt.show()\n",
+        "\n",
+        " \n"
+      ],
+      "metadata": {
+        "id": "M2q-wKZu9Uu9"
       },
       "execution_count": null,
       "outputs": []
