--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO+mp+bIwTrqiojGPK6Ikss",
+      "authorship_tag": "ABX9TyP7tA0pu1HLasN+/UhbfoSB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,19 +37,25 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
+        "from sklearn import datasets\n",
         "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.cluster import KMeans\n",
+        "import matplotlib.patches as mpatches\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.datasets import load_iris\n",
-        "from sklearn.cluster import KMeans\n"
+        "import sklearn.metrics as sm\n",
+        "from mpl_toolkits.mplot3d import Axes3D\n",
+        "from scipy.cluster.hierarchy import linkage,dendrogram\n",
+        "from sklearn.cluster import DBSCAN \n",
+        "from sklearn.decomposition import PCA \n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
         "#Iris.csv is now a pandas dataframe\n",
-        "iris =load_iris()\n",
-        "df_iris = pd.DataFrame(iris.data, columns = iris.feature_names)"
+        "iris = datasets.load_iris()\n",
+        "iris.data"
       ],
       "metadata": {
         "id": "eYODj6HidXze"
@@ -60,7 +66,8 @@
     {
       "cell_type": "code",
       "source": [
-        "df_iris.head()"
+        "print(iris.target_names)\n",
+        "\n"
       ],
       "metadata": {
         "id": "GrJdnvHl6-IL"
@@ -71,8 +78,33 @@
     {
       "cell_type": "code",
       "source": [
-        "x = df_iris.iloc[:, :-1].values\n",
-        "y = df_iris.iloc[:,   -1].values"
+        "print(iris.target)"
+      ],
+      "metadata": {
+        "id": "tCpKAIP5jJkI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = iris.data\n",
+        "y = iris.target"
+      ],
+      "metadata": {
+        "id": "3U8RtDtkjCAQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = pd.DataFrame(iris.data, columns=['Sepal Length', 'Sepal Width', 'Petal Length', 'Petal Width'])\n",
+        "y = pd.DataFrame(iris.target, columns=['Target'])\n",
+        "print(x.head())\n",
+        "print(y.head())"
       ],
       "metadata": {
         "id": "fmoes8pm8tRX"
@@ -83,7 +115,35 @@
     {
       "cell_type": "code",
       "source": [
-        "kmeans = KMeans(n_clusters=3,init = 'k-means++',   max_iter = 100, n_init = 10, random_state = 0)"
+        "wcss = []\n",
+        "\n",
+        "for k in range(1,15):\n",
+        "    kmeans = KMeans(n_clusters=k)\n",
+        "    kmeans.fit(x)\n",
+        "    wcss.append(kmeans.inertia_)\n",
+        "\n",
+        "\n",
+        "plt.figure(figsize=(10,5))\n",
+        "plt.title(\"WCSS / K Chart\", fontsize=18)\n",
+        "plt.plot(range(1,15),wcss,\"-o\")\n",
+        "plt.grid(True)\n",
+        "plt.xlabel(\"Amount of Clusters\",fontsize=14)\n",
+        "plt.ylabel(\"Inertia\",fontsize=14)\n",
+        "plt.xticks(range(1,16))\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "g8w35G7KkBoQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "iris_k_mean_model = KMeans(n_clusters=3)\n",
+        "iris_k_mean_model.fit(x)"
       ],
       "metadata": {
         "id": "DPDj4aM-daLS"
@@ -94,10 +154,10 @@
     {
       "cell_type": "code",
       "source": [
-        "y_kmeans = kmeans.fit_predict(x)"
+        "print(iris_k_mean_model.labels_)"
       ],
       "metadata": {
-        "id": "BTRQ927a8mhC"
+        "id": "lEvN7LIyxQvS"
       },
       "execution_count": null,
       "outputs": []
@@ -105,10 +165,10 @@
     {
       "cell_type": "code",
       "source": [
-        "print(kmeans.cluster_centers_) #display cluster centers"
+        "print(iris_k_mean_model.cluster_centers_)"
       ],
       "metadata": {
-        "id": "9MQEg_jA9NMZ"
+        "id": "5-EfzIcjln5C"
       },
       "execution_count": null,
       "outputs": []
@@ -116,17 +176,47 @@
     {
       "cell_type": "code",
       "source": [
-        "plt.scatter(x[y_kmeans   == 0, 0], x[y_kmeans == 0, 1],s = 100, c = 'red', label = 'Iris-setosa')\n",
-        "plt.scatter(x[y_kmeans   == 1, 0], x[y_kmeans == 1, 1],s = 100, c = 'blue', label = 'Iris-versicolour')\n",
-        "plt.scatter(x[y_kmeans   == 2, 0], x[y_kmeans == 2, 1],s = 100, c = 'green', label = 'Iris-virginica')   #Visualising the clusters - On the first two columns\n",
-        "plt.scatter(kmeans.cluster_centers_[:, 0], kmeans.cluster_centers_[:,1],s = 100, c = 'black', label = 'Centroids')   #plotting the centroids of the clusters\n",
-        "plt.legend()\n",
-        "plt.show()\n",
+        "plt.figure(figsize=(10,5))\n",
+        "colors = np.array(['red', 'green', 'blue'])\n",
+        "y_pred = np.choose(iris_k_mean_model.labels_, [1, 0, 2]).astype(np.int64)\n",
         "\n",
-        " \n"
+        "plt.subplot(1, 2, 1)\n",
+        "plt.scatter(x['Petal Length'], x['Petal Width'], c=colors[y['Target']])\n",
+        "plt.title('Before classification')\n",
+        "red_patch = mpatches.Patch(color='red', label='Setosa')\n",
+        "blue_patch = mpatches.Patch(color='blue', label= 'Versicolor')\n",
+        "green_patch = mpatches.Patch(color='green', label= 'Virginica')\n",
+        "plt.legend(handles=[red_patch, green_patch, blue_patch])\n",
+        "\n",
+        "plt.subplot(1, 2, 2)\n",
+        "plt.scatter(x['Petal Length'], x['Petal Width'], c=colors[y_pred])\n",
+        "plt.title(\"Model's classification\")\n",
+        "plt.legend(handles=[red_patch, green_patch, blue_patch])"
       ],
       "metadata": {
-        "id": "M2q-wKZu9Uu9"
+        "id": "f-I_ZB25lwYh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sm.accuracy_score(y_pred, y['Target'])"
+      ],
+      "metadata": {
+        "id": "RA8sr9eWoxXo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sm.confusion_matrix(y_pred, y['Target'])"
+      ],
+      "metadata": {
+        "id": "ibkZzDwSo5wM"
       },
       "execution_count": null,
       "outputs": []
