--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP7tA0pu1HLasN+/UhbfoSB",
+      "authorship_tag": "ABX9TyOvgaK1VpDr9pd0+hMdt6/B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/anik199/The-Spark-Foundation-Intern-Task/blob/main/Task2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Import Required Library"
+      ],
+      "metadata": {
+        "id": "WN2qlMcf1Jkb"
+      }
     },
     {
       "cell_type": "code",
@@ -51,9 +60,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Load Datasets"
+      ],
+      "metadata": {
+        "id": "u4tU2gAd1iOP"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#Iris.csv is now a pandas dataframe\n",
         "iris = datasets.load_iris()\n",
         "iris.data"
       ],
@@ -99,6 +116,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Data Preprocesing"
+      ],
+      "metadata": {
+        "id": "Y-MBL9x30rpq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "x = pd.DataFrame(iris.data, columns=['Sepal Length', 'Sepal Width', 'Petal Length', 'Petal Width'])\n",
@@ -111,6 +137,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Finding the Optimal Clusters"
+      ],
+      "metadata": {
+        "id": "7QgL8Sht08R9"
+      }
     },
     {
       "cell_type": "code",
@@ -138,6 +173,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Model Fit"
+      ],
+      "metadata": {
+        "id": "jjDkKdd_1uFX"
+      }
     },
     {
       "cell_type": "code",
@@ -174,6 +218,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Before Clusters vs After Clusters"
+      ],
+      "metadata": {
+        "id": "s0v38JlM2Aah"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(10,5))\n",
@@ -198,6 +251,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Accuracy and Confusion Matrix"
+      ],
+      "metadata": {
+        "id": "sfnYu7tZ2aKA"
+      }
     },
     {
       "cell_type": "code",
