--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOvgaK1VpDr9pd0+hMdt6/B",
+      "authorship_tag": "ABX9TyPTDeBTL4u9IvoUqK5wdU1D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,8 +71,8 @@
     {
       "cell_type": "code",
       "source": [
-        "iris = datasets.load_iris()\n",
-        "iris.data"
+        "#Data load from sklearn\n",
+        "iris = datasets.load_iris()"
       ],
       "metadata": {
         "id": "eYODj6HidXze"
@@ -83,11 +83,21 @@
     {
       "cell_type": "code",
       "source": [
-        "print(iris.target_names)\n",
-        "\n"
+        "print(iris.target_names)"
       ],
       "metadata": {
         "id": "GrJdnvHl6-IL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(iris.data)"
+      ],
+      "metadata": {
+        "id": "3SpNOWJ44Dm8"
       },
       "execution_count": null,
       "outputs": []
