--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNn76zdos2b0M712ey06hWo",
+      "authorship_tag": "ABX9TyNEZ/Nq7nxoGvQTkCRSZdX3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,13 +32,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Author : Anik Kumar\n",
-        "\n",
         "## GRIP @ The Sparks Foundation\n",
-        "\n",
-        "> Task1 : Prediction using Supervised Machine Learning\n",
-        "\n",
-        "\n"
+        "####Author : Anik Kumar\n",
+        "> Task1 : Prediction using Supervised Machine Learning\n"
       ],
       "metadata": {
         "id": "mDl4cVUhIKoR"
