--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/WowjVWxkJQfBXmXWQYxs",
+      "authorship_tag": "ABX9TyONgbNklMG6rSCRB/zsCKFI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "source": [
         "## GRIP @ The Sparks Foundation\n",
         "####Author : Anik Kumar\n",
-        "> T**ask1 : Prediction using Supervised Machine Learning**\n"
+        "> **Task1 : Prediction using Supervised Machine Learning**\n"
       ],
       "metadata": {
         "id": "mDl4cVUhIKoR"
