--- a/Task6.ipynb
+++ b/Task6.ipynb
@@ -6,7 +6,7 @@
       "name": "Task6.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPHBkna2odOCduxHO/LJhqG",
+      "authorship_tag": "ABX9TyPbr+kJre0JH+cf0zh9DwRI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,19 +37,19 @@
       "outputs": [],
       "source": [
         "# Importing the required Libraries\n",
-        "\n",
-        "from sklearn.datasets import load_iris\n",
-        "from sklearn.tree import DecisionTreeClassifier, export_graphviz\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "import sklearn.metrics as sm\n",
-        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import seaborn as sns\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "import pydot\n",
-        "from IPython.display import Image"
+        "from IPython.display import Image\n",
+        "\n",
+        "from sklearn.datasets import load_iris\n",
+        "from sklearn.tree import DecisionTreeClassifier, export_graphviz\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import sklearn.metrics as sm\n",
+        "\n"
       ]
     },
     {
@@ -103,6 +103,56 @@
     {
       "cell_type": "code",
       "source": [
+        "#Data points count value for each class labels..\n",
+        "df_data.Species.value_counts()"
+      ],
+      "metadata": {
+        "id": "basAF9C511fs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.scatter(df_data['SepalLengthCm'],df_data['SepalWidthCm'])\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "qk0XF9Xv2NiI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#\n",
+        "sns.lmplot(x=\"SepalLengthCm\", y=\"SepalWidthCm\", hue=\"Species\", data = df_data, \\\n",
+        "              palette=\"Set1\", fit_reg=False, markers=[\"o\", \"s\", \"D\"])"
+      ],
+      "metadata": {
+        "id": "KG9aDrx559iD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#\n",
+        "sns.lmplot(x=\"SepalLengthCm\", y=\"SepalWidthCm\", hue=\"Species\", data = df_data, \\\n",
+        "              palette=\"Set1\", markers=[\"o\", \"s\", \"D\"])"
+      ],
+      "metadata": {
+        "id": "n5uHADSa5dn7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Input data Visualization\n",
         "sns.pairplot(df_data.drop(['Id'],axis=1), hue='Species')\n",
         "plt.show()"
@@ -116,7 +166,24 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "X=df_data[['SepalLengthCm', 'SepalWidthCm','PetalLengthCm', 'PetalWidthCm']]\n",
+        "y=df_data['Species']"
+      ],
+      "metadata": {
+        "id": "K7ijPJUO-Yh0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Model Training\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=1) \n",
+        "model = DecisionTreeClassifier()\n",
+        "model.fit(X_train,y_train)\n",
+        "print(\"Training Complete.\")\n",
+        "y_pred = model.predict(X_test)"
       ],
       "metadata": {
         "id": "gR9Ce7zAy4gt"
@@ -127,7 +194,8 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "df = pd.DataFrame({'Actual': y_test, 'Predicted': y_pred}) \n",
+        "df "
       ],
       "metadata": {
         "id": "33aBXkqIy4c3"
@@ -138,7 +206,8 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Model Accuracy\n",
+        "print(\"Accuracy:\",sm.accuracy_score(y_test, y_pred))"
       ],
       "metadata": {
         "id": "7rlEW4wWy4Po"
@@ -149,32 +218,24 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#Visualizing the trained Decision Tree Classifier taking all 4 features in consideration\n",
+        "\n",
+        "export_graphviz(\n",
+        "        model,\n",
+        "        out_file=\"tree.dot\",\n",
+        "        feature_names=iris.feature_names[:],\n",
+        "        class_names=iris.target_names,\n",
+        "        rounded=True,\n",
+        "        filled=True\n",
+        ")\n",
+        "\n",
+        "(graph,) = pydot.graph_from_dot_file('tree.dot')\n",
+        "graph.write_png('tree.png')\n",
+        "\n",
+        "Image(filename='tree.png') "
       ],
       "metadata": {
-        "id": "feRZMfPTy4FN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "Zb48QHb6y37L"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "Ore7BSg_y3mZ"
+        "id": "mXBMpePsAAbk"
       },
       "execution_count": null,
       "outputs": []
