--- a/Task6.ipynb
+++ b/Task6.ipynb
@@ -6,7 +6,8 @@
       "name": "Task6.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPbr+kJre0JH+cf0zh9DwRI",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyP302jxRAVitbcN269wm/64",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +28,18 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/anik199/The-Spark-Foundation-Intern-Task/blob/main/Task6.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## GRIP @ The Sparks Foundation\n",
+        "####Author : Anik Kumar\n",
+        "> **Task6 : Prediction using Supervised Machine Learning**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "RjUQ2ZxiLcSJ"
+      }
     },
     {
       "cell_type": "code",
@@ -67,7 +80,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Basic Information regarding data\n",
+        "#Basic Information of data\n",
         "df_data.info()"
       ],
       "metadata": {
@@ -79,7 +92,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Describe function gives the basic numerical info about data for each numeric feature.\n",
+        "#Get basic statistics of data.\n",
         "df_data.describe()"
       ],
       "metadata": {
@@ -91,7 +104,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Checking top 10 records of Dataset..\n",
+        "# Top 5 records of Dataset..\n",
         "df_data.head()"
       ],
       "metadata": {
@@ -103,7 +116,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Data points count value for each class labels..\n",
+        "#Data points count value for each class labels.\n",
         "df_data.Species.value_counts()"
       ],
       "metadata": {
@@ -115,6 +128,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Ploting with two Column\n",
         "plt.scatter(df_data['SepalLengthCm'],df_data['SepalWidthCm'])\n",
         "plt.show()"
       ],
@@ -127,7 +141,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#\n",
+        "#Ploting..\n",
         "sns.lmplot(x=\"SepalLengthCm\", y=\"SepalWidthCm\", hue=\"Species\", data = df_data, \\\n",
         "              palette=\"Set1\", fit_reg=False, markers=[\"o\", \"s\", \"D\"])"
       ],
@@ -140,7 +154,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#\n",
+        "#Ploting...\n",
         "sns.lmplot(x=\"SepalLengthCm\", y=\"SepalWidthCm\", hue=\"Species\", data = df_data, \\\n",
         "              palette=\"Set1\", markers=[\"o\", \"s\", \"D\"])"
       ],
@@ -153,7 +167,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Input data Visualization\n",
+        "# Ploting All features \n",
         "sns.pairplot(df_data.drop(['Id'],axis=1), hue='Species')\n",
         "plt.show()"
       ],
@@ -166,7 +180,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Seperate Feature asign X Variable\n",
         "X=df_data[['SepalLengthCm', 'SepalWidthCm','PetalLengthCm', 'PetalWidthCm']]\n",
+        "# Target asign y Variable\n",
         "y=df_data['Species']"
       ],
       "metadata": {
@@ -178,11 +194,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# Model Training\n",
+        "# Train and Test Split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=1) \n",
+        "#Select Model\n",
         "model = DecisionTreeClassifier()\n",
+        "#Fit Model\n",
         "model.fit(X_train,y_train)\n",
         "print(\"Training Complete.\")\n",
+        "#Predict model on test sets\n",
         "y_pred = model.predict(X_test)"
       ],
       "metadata": {
@@ -194,6 +213,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Actual vs Predicted\n",
         "df = pd.DataFrame({'Actual': y_test, 'Predicted': y_pred}) \n",
         "df "
       ],
@@ -218,12 +238,12 @@
     {
       "cell_type": "code",
       "source": [
-        "#Visualizing the trained Decision Tree Classifier taking all 4 features in consideration\n",
+        "# Visualizing tree graph the trained model feature and target\n",
         "\n",
         "export_graphviz(\n",
         "        model,\n",
         "        out_file=\"tree.dot\",\n",
-        "        feature_names=iris.feature_names[:],\n",
+        "        feature_names=iris.feature_names,\n",
         "        class_names=iris.target_names,\n",
         "        rounded=True,\n",
         "        filled=True\n",
@@ -239,6 +259,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h3 align=\"center\">Thank You</h3>"
+      ],
+      "metadata": {
+        "id": "GJY1TpQcL_29"
+      }
     }
   ]
 }
