--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPTDeBTL4u9IvoUqK5wdU1D",
+      "authorship_tag": "ABX9TyN9It4IL77Tyhzf6WcyI8HW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/anik199/The-Spark-Foundation-Intern-Task/blob/main/Task2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## GRIP @ The Sparks Foundation\n",
+        "####Author : Anik Kumar\n",
+        "> **Task2 : Prediction using Unsupervised Machine Learning**"
+      ],
+      "metadata": {
+        "id": "KfZ4w2aDMa1M"
+      }
     },
     {
       "cell_type": "markdown",
@@ -292,6 +303,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<h3 align=\"center\">Thank You</h3>"
+      ],
+      "metadata": {
+        "id": "Q5dT72dIMkJ4"
+      }
     }
   ]
 }
