--- a/Task6.ipynb
+++ b/Task6.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP302jxRAVitbcN269wm/64",
+      "authorship_tag": "ABX9TyMJSrTIhjbmWR4dMQSzppRN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Import Required Library"
+      ],
+      "metadata": {
+        "id": "Bfx5Sb8GM29F"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -64,6 +73,15 @@
         "import sklearn.metrics as sm\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Load Datasets"
+      ],
+      "metadata": {
+        "id": "8A0yRO7mNHXo"
+      }
     },
     {
       "cell_type": "code",
@@ -126,6 +144,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Data Visualization"
+      ],
+      "metadata": {
+        "id": "Xh-FoloANLBp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Ploting with two Column\n",
@@ -178,6 +205,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Data Preprocessing"
+      ],
+      "metadata": {
+        "id": "iC50leVYNX_G"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Seperate Feature asign X Variable\n",
@@ -190,6 +226,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Model Train and Predict"
+      ],
+      "metadata": {
+        "id": "TtOcL8lJNlF5"
+      }
     },
     {
       "cell_type": "code",
@@ -211,6 +256,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Compare Actual vs Predicted Values"
+      ],
+      "metadata": {
+        "id": "fQBaoU0JNrad"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Actual vs Predicted\n",
@@ -224,6 +278,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Model Acuuracy"
+      ],
+      "metadata": {
+        "id": "hNROW3YCN3FR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Model Accuracy\n",
@@ -234,6 +297,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Visualize Tree graph"
+      ],
+      "metadata": {
+        "id": "bVpeXGNNOAUX"
+      }
     },
     {
       "cell_type": "code",
