--- a/Task6.ipynb
+++ b/Task6.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMJSrTIhjbmWR4dMQSzppRN",
+      "authorship_tag": "ABX9TyODLPbbENWMDCGuIvus/d9m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,8 +66,6 @@
         "import matplotlib.pyplot as plt\n",
         "import pydot\n",
         "from IPython.display import Image\n",
-        "\n",
-        "from sklearn.datasets import load_iris\n",
         "from sklearn.tree import DecisionTreeClassifier, export_graphviz\n",
         "from sklearn.model_selection import train_test_split\n",
         "import sklearn.metrics as sm\n",
@@ -86,8 +84,20 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import files\n",
+        "uploaded = files.upload()"
+      ],
+      "metadata": {
+        "id": "h7Gc_1BLDmIu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Loading Dataset\n",
-        "df_data = pd.read_csv(\"/content/Iris.csv\")"
+        "df_data = pd.read_csv(\"Iris.csv\")"
       ],
       "metadata": {
         "id": "dH6ggQuUypRH"
@@ -240,7 +250,7 @@
       "cell_type": "code",
       "source": [
         "# Train and Test Split\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=1) \n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1) \n",
         "#Select Model\n",
         "model = DecisionTreeClassifier()\n",
         "#Fit Model\n",
@@ -311,12 +321,14 @@
       "cell_type": "code",
       "source": [
         "# Visualizing tree graph the trained model feature and target\n",
+        "fn = ['SepalLengthCm', 'SepalWidthCm','PetalLengthCm', 'PetalWidthCm']\n",
+        "tn = ['Iris-setosa', 'Iris-versicolor', 'Iris-virginica']\n",
         "\n",
         "export_graphviz(\n",
         "        model,\n",
         "        out_file=\"tree.dot\",\n",
-        "        feature_names=iris.feature_names,\n",
-        "        class_names=iris.target_names,\n",
+        "        feature_names=fn,\n",
+        "        class_names=tn,\n",
         "        rounded=True,\n",
         "        filled=True\n",
         ")\n",
