--- a/Task6.ipynb
+++ b/Task6.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyODLPbbENWMDCGuIvus/d9m",
+      "authorship_tag": "ABX9TyMDuMS6CpcZKLr7e48Beclx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "source": [
         "## GRIP @ The Sparks Foundation\n",
         "####Author : Anik Kumar\n",
-        "> **Task6 : Prediction using Supervised Machine Learning**\n",
+        "> **Task6 : Prediction using Decision Tree Algorithms**\n",
         "\n"
       ],
       "metadata": {
